# python-jose-speedup

./: pyproject.toml  requirements.txt
jose/: jwe.py  jws.py  jwt.py  utils.py
